--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,6 +8,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.Newsforest.android.Newsforest.MainActivity"
     android:orientation="vertical"
+    android:id="@+id/Main_layout"
     tools:showIn="@layout/app_bar_main"
     xmlns:ads="http://schemas.android.com/apk/res-auto">
 
@@ -14,6 +16,7 @@
 
 
     <android.support.v7.widget.RecyclerView
+        android:paddingTop="10dp"
         android:id="@+id/recyclerview"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
@@ -23,4 +26,4 @@
 
 
 
-</LinearLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
