--- a/app/src/main/res/layout/content_main2.xml
+++ b/app/src/main/res/layout/content_main2.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,6 +9,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.Newsforest.android.Newsforest.Main2Activity"
     tools:showIn="@layout/activity_main2"
+
     >
 
     <android.support.v7.widget.RecyclerView
@@ -16,6 +18,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#cfd8dc"
-        android:layout_marginTop="50dp">
+        android:paddingTop="10dp">
     </android.support.v7.widget.RecyclerView>
-</LinearLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
