--- a/app/src/main/res/layout/splash_forest.xml
+++ b/app/src/main/res/layout/splash_forest.xml
@@ -16,12 +16,13 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="version 2.2.0 (2018)"
+        android:text="version 2.3 (2018)"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         android:layout_centerVertical="true"
         android:layout_marginBottom="20dp"
         android:textStyle="normal"
+        android:id="@+id/app_version"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         android:textSize="15dp"
         android:textColor="#003a33"/>
