--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -16,11 +16,11 @@
 
 
     <android.support.v7.widget.RecyclerView
-        android:paddingTop="10dp"
+        android:paddingTop="2dp"
         android:id="@+id/recyclerview"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:background="#cfd8dc">
+        android:background="#eee">
 
     </android.support.v7.widget.RecyclerView>
 
