--- a/app/src/main/res/layout/costume_row.xml
+++ b/app/src/main/res/layout/costume_row.xml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardElevation="2dp"
+    app:cardCornerRadius="10dp"
+    android:padding="5dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginBottom="8dp"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:elevation="2dp"
+    app:cardBackgroundColor="#ffffff"
+    android:outlineProvider="bounds"
+    >
 <LinearLayout
+
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="5dp"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
-    android:background="@drawable/linearlayout_bg"
-    android:layout_marginBottom="8dp">
+    >
     <LinearLayout
 
         android:layout_width="match_parent"
@@ -18,6 +30,7 @@
         android:layout_marginTop="8dp"
         android:orientation="horizontal">
     <TextView
+        android:maxLines="2"
         android:layout_weight="1"
         android:text="heading"
         android:textAppearance="@android:style/TextAppearance.Large"
@@ -64,3 +77,4 @@
 
 
 </LinearLayout>
+</android.support.v7.widget.CardView>
