--- a/app/src/main/res/layout/match_scores.xml
+++ b/app/src/main/res/layout/match_scores.xml
@@ -1,12 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardElevation="5dp"
+    app:cardCornerRadius="10dp"
+    app:cardBackgroundColor="#ffffff"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="5dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginBottom="8dp"
+    >
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/linearlayout_bg"
     android:id="@+id/match_scores"
-    android:layout_margin="10dp"
     android:padding="5dp"
     >
 
@@ -24,8 +35,15 @@
             android:textColor="#000000"
             android:paddingLeft="10dp"
             android:textSize="20dp"
-            android:id="@+id/team2"
+            android:id="@+id/team1"
             android:layout_weight="1"/>
+        <ImageView
+            android:padding="10dp"
+            android:visibility="gone"
+            android:id="@+id/winner1"
+            android:src="@drawable/crowns"
+            android:layout_width="50dp"
+            android:layout_height="50dp" />
         <TextView
             android:layout_gravity="center_vertical"
             android:layout_width="51dp"
@@ -56,20 +74,31 @@
         android:layout_height="wrap_content"
         android:text="  VS  "
         />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <TextView
         android:textSize="20dp"
         android:textStyle="bold"
         android:textColor="#000000"
         android:paddingLeft="10dp"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
         android:hint="team1"
-        android:id="@+id/team1"/>
-
+        android:id="@+id/team2"/>
+        <ImageView
+            android:visibility="gone"
+            android:id="@+id/winner2"
+            android:src="@drawable/crowns"
+            android:layout_width="30dp"
+            android:layout_height="30dp" />
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -81,6 +110,18 @@
         android:id="@+id/date"
         android:layout_margin="5dp"
         />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Time"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:paddingLeft="10dp"
+            android:textSize="15dp"
+            android:id="@+id/time"
+            android:layout_margin="5dp"
+            />
 
     </LinearLayout>
 </LinearLayout>
+</android.support.v7.widget.CardView>
