--- a/app/src/main/res/layout/splash_forest.xml
+++ b/app/src/main/res/layout/splash_forest.xml
@@ -16,7 +16,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="version 2.3 (2018)"
+        android:text="version 2.4.0"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         android:layout_centerVertical="true"
